Fix layout issue in FF.

--- a/less/global.less
+++ b/less/global.less
@@ -46,7 +46,7 @@
 @search-width: (@lane-width * 0.75 * 4) + (@wide-margin * 5);
 @search-margin: @wide-margin * 4;
 @board-width: (@lane-width * 5) + (@wide-margin * 4);
-@puzzle-width: @board-width + @player-frame-size + @wide-margin;
+@puzzle-width: @board-width + @player-frame-size + (@wide-margin * 2);
 @editing-width: @search-width + @search-margin + @puzzle-width;
 
 @empty-space-color: rgba(0, 0, 0, 0.3);
